<resources>
    <string name="app_name">Movies Feed</string>
    <string name="about">About</string>
    <string name="email_creator">pedro92.gf@gmail.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_request_feed">Can\'t load results</string>
    <string name="error_request_feed_network">A network error has occurred.\nVerify your connection.</string>
    <string name="videos">Videos</string>
    <string name="cast_crew">Cast and Crew</string>
    <string name="tell_a_friend">Tell a Friend</string>
    <string name="third_party_apis">Third-Party APIs</string>
    <string name="settings">Settings</string>
    <string name="copyright">Copyright © 2017 PGF. All rights reserved.</string>
    <string name="tell_a_friend_message">Hey check out the best movies here, MoviesFeed App at:</string>
    <string name="as">as&#160;</string>
    <string name="search">Search</string>
    <string name="search_hint">What movie are you looking for?</string>
    <string name="no_movies_found">We did not find any movie related to your search.</string>
    <string name="popularity">Popularity</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="revenue">Revenue</string>
    <string name="action">Action</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="romance">Romance</string>
    <string name="drama">Drama</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="music">Music</string>
    <string name="thriller">Thriller</string>
    <string name="horror">Horror</string>
    <string name="documentary">Documentary</string>
    <string name="war">War</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="reviews">Reviews</string>
    <string name="try_again">Try again</string>
    <string name="error_request_feed_too_many_requests">Too many requests have been sent within a given time span</string>
    <string name="error_request_feed_limit_movies_reached">The limit of movies downloaded for this category reached.</string>
    <string name="known_for">Known for</string>
    <string name="biography">Biography</string>
    <string name="birthday">Birthday: </string>
    <string name="birthplace">Birthplace:</string>
    <string name="feed_banner_ad_unit_id">ca-app-pub-6469946228125641/9434325410</string>
    <string name="movie_details_banner_ad_unit_id">ca-app-pub-6469946228125641/3754391814</string>
    <string name="person_details_banner_ad_unit_id">ca-app-pub-6469946228125641/6707858211</string>
    <string name="test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="budget">Budget:</string>
    <string name="revenue_movie_details">Revenue:</string>
    <string name="rate_this_app">Give us your Feedback</string>


</resources>
