<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_holo_light">

    <ProgressBar
        android:id="@+id/progressLoadingMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true" />


    <include layout="@layout/view_error" />


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:visibility="gone">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">


            <com.lsjwzh.widget.recyclerviewpager.RecyclerViewPager
                android:id="@+id/recyclerViewPersonImages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                app:layout_collapseMode="parallax"
                app:rvp_singlePageFling="true"
                app:rvp_triggerOffset="0.1" />


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarPersonDetails"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_collapseMode="pin" />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="60dp">

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/separator"
                app:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="5dp">

                <RelativeLayout
                    android:id="@+id/layoutInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:paddingBottom="10dp">

                    <RelativeLayout
                        android:id="@+id/layoutTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <com.moviesfeed.ui.activities.uicomponents.CustomTextView
                            android:id="@+id/txtBiography"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:text="@string/biography"
                            android:textColor="@android:color/black"
                            android:textSize="18dp"
                            android:visibility="gone"
                            app:typeface="Roboto-Regular.ttf" />

                        <ImageView
                            android:id="@+id/imgHomepage"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:adjustViewBounds="true"
                            android:background="@drawable/rounded_border_background_selector"
                            android:padding="5dp"
                            android:src="@drawable/img_homepage_src"
                            android:visibility="gone" />

                    </RelativeLayout>

                    <com.moviesfeed.ui.activities.uicomponents.CustomTextView
                        android:id="@+id/txtPersonBiography"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/layoutTitle"
                        android:layout_marginTop="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="16dp"
                        android:visibility="gone"
                        app:typeface="Roboto-Light.ttf" />

                    <RelativeLayout
                        android:id="@+id/layoutBirthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtPersonBiography"
                        android:layout_marginTop="10dp"
                        android:visibility="gone">


                        <com.moviesfeed.ui.activities.uicomponents.CustomTextView
                            android:id="@+id/txtBirthday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/birthday"
                            android:textColor="@android:color/black"
                            android:textSize="14dp"
                            app:typeface="Roboto-Regular.ttf" />

                        <com.moviesfeed.ui.activities.uicomponents.CustomTextView
                            android:id="@+id/txtPersonBirthday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_toEndOf="@id/txtBirthday"
                            android:textColor="@android:color/black"
                            android:textSize="14dp"
                            app:typeface="Roboto-Light.ttf" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/layoutBirthplace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/layoutBirthday"
                        android:layout_marginTop="10dp"
                        android:visibility="gone">

                        <com.moviesfeed.ui.activities.uicomponents.CustomTextView
                            android:id="@+id/txtBirthplace"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/birthplace"
                            android:textColor="@android:color/black"
                            android:textIsSelectable="true"
                            android:textSize="14dp"
                            app:typeface="Roboto-Regular.ttf" />

                        <com.moviesfeed.ui.activities.uicomponents.CustomTextView
                            android:id="@+id/txtPersonBirthplace"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_toEndOf="@id/txtBirthplace"
                            android:textColor="@android:color/black"
                            android:textIsSelectable="true"
                            android:textSize="14dp"
                            app:typeface="Roboto-Light.ttf" />

                    </RelativeLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewPersonMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardViewInfo"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="5dp">

                <RelativeLayout
                    android:id="@+id/layoutPersonMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutSubContent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:paddingBottom="5dp">

                    <com.moviesfeed.ui.activities.uicomponents.CustomTextView
                        android:id="@+id/txtPersonKnownFor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/known_for"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"
                        app:typeface="Roboto-Regular.ttf" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerViewPersonMovies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtPersonKnownFor"
                        android:layout_marginTop="@dimen/movie_detail_title_margin_bottom"
                        android:background="@android:color/white"
                        android:nestedScrollingEnabled="false"
                        android:scrollbarSize="10dp"
                        android:scrollbarStyle="outsideInset"
                        android:scrollbars="horizontal" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/personDetailsAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:adSize="BANNER"
        app:adUnitId="@string/test_banner_ad_unit_id" />

</android.support.design.widget.CoordinatorLayout>